--- a/src/main/resources/static/verification-failed.html
+++ b/src/main/resources/static/verification-failed.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Email Verification Failed</title>
-    <style>
+    <style nonce="ABC123">
         body {
             display: flex;
             justify-content: center;
