--- a/src/main/resources/static/verification-success.html
+++ b/src/main/resources/static/verification-success.html
@@ -4,38 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Email Verification Success</title>
-    <style nonce="ABC123">
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        .container {
-            background: #fff;
-            padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            width: 350px;
-        }
-
-        .logo {
-            width: 150px;
-            margin-bottom: 20px;
-            border-radius: 5px;
-        }
-
-        .success {
-            color: #4CAF50;
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-    </style>
+    <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
