Handle phone number in accept-success.html

--- a/src/main/resources/static/accept-success.html
+++ b/src/main/resources/static/accept-success.html
@@ -30,7 +30,7 @@
 
         <a class="whatsapp-btn" id="whatsappLink"
            target="_blank"
-           th:href="'https://wa.me/+02' + ${param.phoneNumber[0]}">
+           th:href="'https://wa.me/2' + ${param.phoneNumber[0]}">
             <i class="fab fa-whatsapp"></i> Contact via WhatsApp
         </a>
     </div>
